<?xml version="1.0"?>
<package>
  <name>patrol_msgs</name>
  <version>0.0.0</version>
  <description>The patrol_msgs package</description>

  <maintainer email="jeff@todo.todo">jeff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
